@@ -1,3 +1,8 @@
+Tue Feb 20 15:10:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tao/AnyTypeCode/TypeCode.{h,cpp,inl}:
+          Layout changes
+
 Tue Feb 20 13:21:08 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>
 
         * orbsvcs/tests/Bug_2800_Regression/NamingTask.cpp:
